--- a/python/session-2016-03-idf/2_modules/theorie/synope_modules_3_distribution.ipynb
+++ b/python/session-2016-03-idf/2_modules/theorie/synope_modules_3_distribution.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Distribuez votre projet : le packaging"
+    "# Distribuez votre projet"
    ]
   },
   {
@@ -21,10 +21,9 @@
    "source": [
     "* Une distribution est une collection de modules Python distribués ensembles comme une ressource téléchargeable et destinée à être installée. Il existe énormément de distributions de modules comme *PIL (the Python Imaging Library)*, *PyXML*, *etc*.\n",
     "\n",
-    "* Pour faire le lien entre la distribution et la plateforme de destination, on utilise des classes intermédiaires appelées *packagers*. Les packagers vont prendre les sources et les compiler pour effectuer une «release». Ainsi les utilisateurs finaux vont pouvoir installer les modules sans difficulté. *Distutils* est un packagers qui va vous permettre facilement de distribuer votre code.\n",
+    "* Pour faire le lien entre la distribution et la plateforme de destination, on utilise des outils appelés *packagers*. Les packagers vont prendre les sources et les compiler pour effectuer une «release». Ainsi les utilisateurs finaux vont pouvoir installer les modules sans difficulté.\n",
     "\n",
-    "* La librairie Distutils regroupe l’ensemble des utilitaires Python pour la distribution de modules. Pour distribuer votre code, il faudra écrire un script d’installation (nommé `setup.py` par convention) et éventuellement écrire un fichier de configuration d’installation.\n",
-    "* Ensuite, il vous faudra créer une ressource distribuable (souvent une archive) et optionnellement créer une ou plusieurs distributions compilées.\n"
+    "* *Distutils* est un packager basique. Pour distribuer votre code, il faudra écrire un script d’installation (nommé `setup.py` par convention) et éventuellement écrire un fichier de configuration d’installation. Ensuite, il vous faudra créer une ressource distribuable (souvent une archive) et optionnellement créer une ou plusieurs distributions compilées.\n"
    ]
   },
   {
@@ -236,6 +235,17 @@
     "$>python setup.py bdist –help-formats\n",
     "```\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Le mode développement\n",
+    "\n",
+    "Setuptools (l'extension de Distutils) offre un mode \"développement\", qui permet de faire semblant d'installer un package, mais de n'installer en fait que des liens symboliques qui pointent vers les fichiers originaux, de telle sorte qu'on peut éditer ces fichiers et tester leur utilisation par du code client, sans avoir à les réinstaller à chaque fois. De plus, une commande permet de nettoyer la fausse installation si nécessaire :\n",
+    "* pour pseudo-installer une distribution : `python setup.py develop`\n",
+    "* pour nettoyer : `python setup.py develop --uninstall`"
    ]
   },
   {
