corrections de christophe

--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_4_entrees_sorties.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_4_entrees_sorties.ipynb
@@ -41,20 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La somme de 3 et 2 est 5\n",
-      "Le produit de 3 et 2 est 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a=3; b=2;\n",
     "print('La somme de', a, 'et', b, 'est', a+b)\n",
@@ -63,19 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La somme de 3 et 2 est 5, et le produit de 3 et 2 est 6.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('La somme de', a, 'et', b, 'est', a+b, end=', ')\n",
     "print('et le produit de', a, 'et', b, 'est', a*b, end='.\\n')"
@@ -209,22 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'pi = 3.14 '"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"pi = %1.2f \" % 3.14159"
    ]
@@ -245,20 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Quel est votre nom ? toto\n",
-      "toto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nom = input(\"Quel est votre nom ? \") ; print(nom)"
    ]
@@ -267,26 +230,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ATTENTION : la chaîne de caractère n'est pas interprétée, ni transformée en nombre si celle-c ressemble à un nombre. Il faut le faire explicitement (contrairement à Python 2)."
+    "ATTENTION : la chaîne de caractère n'est pas interprétée, ni transformée en nombre si celle-ci ressemble à un nombre. Il faut le faire explicitement (contrairement à Python 2)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Quel âge avez-vous ?21\n",
-      "<class 'str'>\n",
-      "<class 'int'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = input(\"Quel âge avez-vous ?\") ; print(type(age)) ; age = int(age) ; print(type(age))"
    ]
@@ -316,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -339,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -347,20 +300,7 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ceci est la premiere ligne du fichier : <Ceci est un fichier\n",
-      ">\n",
-      "ceci sont les 5 caractères suivants : <avec >\n",
-      "ceci est le reste du fichier : <\n",
-      "['du contenu ...!1\\n', \" et encore d'autres informations\\n\", 'inutiles au possible']\n",
-      ">\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fin = open(\"Monfichier\", 'r')\n",
     "ligne = fin.readline()\n",
@@ -518,113 +458,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>\n",
-       "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
-       "\n",
-       "<style>\n",
-       "\n",
-       "h1, h2, h3, h4, h5 {\n",
-       "    font-family: 'Alegreya Sans', sans-serif;\n",
-       "}\n",
-       "\n",
-       "div.text_cell_render{\n",
-       "    font-family: 'Alegreya Sans',Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
-       "    line-height: 135%;\n",
-       "    font-size: 120%;\n",
-       "    width:100%;/*600px;*/\n",
-       "    /*margin-left:auto;*/\n",
-       "    /*margin-right:auto;*/\n",
-       "}\n",
-       "/*div.text_cell_render{font-family: \"Open Sans\", sans-serif;font-weight: normal; line-height:normal;}*/\n",
-       "\n",
-       "/* header colours and fonts */\n",
-       ".rendered_html h1 {\n",
-       "    color:#9A3334;\n",
-       "    /*margin-top: 0.5em;*/\n",
-       "    padding: 1em;\n",
-       "    display: block;\n",
-       "    font-size: 40px;\n",
-       "    text-align: center;\n",
-       "    border-top: 2px solid #9A3334;\n",
-       "    border-bottom: 2px solid #9A3334;\n",
-       "}\n",
-       "\n",
-       "/*.rendered_html h1 { color: #9A3334; font-family: Lora, sans-serif; font-weight: normal; text-align: center; }*/\n",
-       ".rendered_html h2 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-style: italic;\n",
-       "    font-weight: normal;\n",
-       "    font-size: 30px;\n",
-       "    /*text-align: center;*/\n",
-       "    border-bottom: 1px solid #9A3334;\n",
-       "}\n",
-       ".rendered_html h3 {\n",
-       "    color: #9A3334;\n",
-       "    /*font-family: Lora, sans-serif;*/\n",
-       "    font-weight: normal;\n",
-       "    font-size: 25px;\n",
-       "    font-style: italic;\n",
-       "}\n",
-       "\n",
-       ".rendered_html h4 {\n",
-       "    border: 2px solid #9A3334;\n",
-       "    border-radius: 25px;\n",
-       "    font-style: italic;\n",
-       "    height:5%;\n",
-       "    width:15%;\n",
-       "    padding:5px;\n",
-       "    text-align: center;\n",
-       "}\n",
-       "\n",
-       "div.prompt {\n",
-       "    display: None;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".ui-wrapper {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       "/* center the images */\n",
-       ".video {\n",
-       "    margin-left: auto !important;\n",
-       "    margin-right: auto !important;\n",
-       "}\n",
-       "\n",
-       ".rendered_html img {\n",
-       "    margin-top: 0em;\n",
-       "}\n",
-       "\n",
-       "div.input_area {\n",
-       "    border-radius: 10px;\n",
-       "}\n",
-       "\n",
-       "/*.reveal h1 {\n",
-       "    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);\n",
-       "}*/\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# execute this part to modify the css style\n",
     "from IPython.core.display import HTML\n",
@@ -651,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
