commit avant session gif

--- a/python/session-2016-03-idf/3_objets/ellipsoides/enonce/synope_session_2016_03_idf-TP3.ipynb
+++ b/python/session-2016-03-idf/3_objets/ellipsoides/enonce/synope_session_2016_03_idf-TP3.ipynb
@@ -20,64 +20,247 @@
    "source": [
     "## 1/6 : La définition de classes\n",
     "\n",
-    "Créez une classe $Quaternion$, dans son propre fichier, avec les attributs suivants :\n",
-    "- $a$, $b$, $c$, $d$ : les quatres valeurs internes du quaternion,\n",
-    "- $init\\_xyz$ : initialise les valeurs b, c, et d ci-dessus à partir d'un point 3D x/y/z.\n",
-    "- $init\\_theta$ : initialise le quaternion de rotation à partir d'un angle \\theta et d'un tuple u_x/u_y/u_z.\n",
-    "- $init\\_theta\\_inv$ : initialise le quaternion de rotation à partir d'un angle \\theta et d'un tuple u_x/u_y/u_z."
+    "Définissez les trois classes ci-dessous."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## 2/6 : Les méthodes spéciales"
+    "#### Question 1\n",
+    "\n",
+    "Définissez la classe `Superellipse`:\n",
+    "* Attributs\n",
+    "  * rx : rayon suivant x\n",
+    "  * ry : rayon suivant y\n",
+    "  * m : puissance dans l'expression de la superellipse.\n",
+    "* Méthodes\n",
+    "  * init(self, rx, ry, m) : initialisation des attributs.\n",
+    "  * cloud(self,n): renvoie un échantillon de n points de la surface (deux listes x,y).\n",
+    "  * area(self): renvoie l'aire (un scalaire).\n",
+    "  \n",
+    "L'aire d'une super-ellipse est la suivante (utilisez math.gamma) :\n",
+    "$$\n",
+    "\\frac{4^{(1-\\frac{1}{m})} r_x r_y \\sqrt{\\pi} \\Gamma{(1+\\frac{1}{m})}}{\\Gamma{(\\frac{1}{2}+\\frac{1}{m})}}\n",
+    "$$\n",
+    "\n",
+    "  \n",
+    "Dans le fichier `demos/superellipse.py`, placez ce programme de démonstration et faites en sorte qu'il s'exécute correctement :\n",
+    "\n",
+    "~~~python\n",
+    "import pySynope\n",
+    "import math\n",
+    "\n",
+    "se = pySynope.Superellipse()\n",
+    "se.init(1, 1, 2)\n",
+    "print(se.cloud(5))\n",
+    "print(se.area())\n",
+    "~~~"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## 3/6 : Les objets composés"
+    "#### Question 2\n",
+    "\n",
+    "Définissez la classe `Superellipsoid` :\n",
+    "* Attributs\n",
+    "  * rx : rayon suivant x\n",
+    "  * ry : rayon suivant y\n",
+    "  * rz : rayon suivant z\n",
+    "  * m1 : puissance dans l'expression de la superellipse\n",
+    "  * m2 : paramètre qui détérmine le \"balayage\" vertical \n",
+    "* Méthodes\n",
+    "  * init(self, rx, ry, rz, m1, m2) : initialisation des attributs.\n",
+    "  * cloud(self,n) : renvoie un échantillon de n*n points de la surface (trois listes a 2 dimensions x,y,z).\n",
+    "  * volume(self) : renvoie le volume de la superellipsoide.\n",
+    " \n",
+    "Le volume d'une superellipsoide s'exprime en deux temps :\n",
+    "\n",
+    "$$\n",
+    "\\beta{(m,n)} = \\frac{\\Gamma{(m)} \\Gamma{(n)}}{\\Gamma{(m+n)}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "V = \\frac{2}{3} r_x r_y r_z \\frac{4}{m_1 m_2} \\beta{(\\frac{1}{m_1}, \\frac{1}{m_1})} \\beta{(\\frac{2}{m_1}, \\frac{1}{m_2})}\n",
+    "$$\n",
+    " \n",
+    "Dans le fichier `demos/superellipsoid.py`, placez ce programme de démonstration et faites en sorte qu'il s'exécute correctement :\n",
+    "\n",
+    "~~~python\n",
+    "import pySynope\n",
+    "import math\n",
+    "\n",
+    "se = pySynope.Superellipsoid()\n",
+    "se.init(1, 1, 1, 2, 2)\n",
+    "print(se.cloud(4))\n",
+    "print(se.volume(), 4./3*math.pi)\n",
+    "~~~"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## 4/6 : L'héritage entre classes"
+    "#### Question 3\n",
+    "\n",
+    "Définissez la classe `Quaternion` :\n",
+    "* Attributs\n",
+    "  * w : flottant représentant la partie réelle du quaternion.\n",
+    "  * coords : liste de trois flottants représentant la partie imaginaire du quaternion.\n",
+    "* Méthodes\n",
+    "  * init(self,angle,axe) : initialise les attributs pour que le quaternion représente une rotation de l'angle donné autour de l'axe donné (ce dernier étant fourni sous forme d'un tuple de trois flottants correspondants aux coordonnées x, y, z).\n",
+    "  * rotate(self, point) : applique la rotation au point (donné sous la forme d'un tuple de trois flottants correspondants aux coordonnées x, y, z).\n",
+    "\n",
+    "Dans le fichier `demos/quaternion.py`, placez ce programme de démonstration et faites en sorte qu'il s'exécute correctement :\n",
+    "\n",
+    "~~~python\n",
+    "import pySynope\n",
+    "import math\n",
+    "\n",
+    "q = pySynope.Quaternion()\n",
+    "q.init(math.pi/4)\n",
+    "print(q)\n",
+    "\n",
+    "pos = (1, 0, 0)\n",
+    "pos = q.rotate(pos)\n",
+    "pos = q.rotate(pos)\n",
+    "print(pos)  \n",
+    "~~~"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "source": [
+    "## 2/6 : Les méthodes spéciales\n",
+    "\n",
+    "#### Question 4\n",
+    "\n",
+    "Transformez les fonctions `init()` en constructeurs.  \n",
+    "Comme d'habitude, assurez vous du bon fonctionnement des démonstrations.\n",
+    "\n",
+    "#### Question 5\n",
+    "\n",
+    "Dotez la classe `Quaternion` de la méthode spéciale appropriée, afin que l'affichage effectué par print soit similaire à la notation mathématique \"a + bi +cj + dk\".\n",
+    "\n",
+    "#### Question 6\n",
+    "\n",
+    "Dotez la classe `Quaternion` d'un opérateur de multiplication, qui permette de combiner plusieurs rotations (on utilisera le produit hamiltonien). Ainsi, la double rotation de la démonstration peut se réécrire :\n",
+    "\n",
+    "~~~python\n",
+    "...\n",
+    "pos = (q*q).rotate(pos)\n",
+    "print(pos)  \n",
+    "~~~\n",
+    "\n",
+    "#### Question 7\n",
+    "\n",
+    "Enrichissez le constructeur de quaternion pour qu'il accepte plusieurs\n",
+    "possibilités pour ses arguments :\n",
+    "1. l'utilisateur fournit un nombre flottant, et une liste de trois flottants, auquel cas il faut comprendre qu'il s'agit d'un angle de rotation et d'un axe de rotation,\n",
+    "2. l'utilisateur fournit une liste de trois flottants, auquel cas il faut comprendre qu'il s'agit d'un point 3D dont les coordonnées doivent être utilisées pour initialiser la partie imaginaire du quaternion (bi+cj+dk), et la partie réelle doit être mise à 0.\n",
+    "3. l'utilisateur fournit une liste de quatre flottants, auquel cas il faut comprendre qu'il s'agit des quatres coordonnées du quaternion (partie réelle, puis les trois coordonnées de la partie imaginaire).\n",
+    "\n",
+    "Ajoutez une méthode conjugate() à la classe `Quaternion`, qui renvoit un quaternion modifié, dans lequel les coordonnées imaginaires ont été remplacées par leur opposé.\n",
+    "\n",
+    "Ainsi, on peut se passer de la méthode `rotate()` et écrire ainsi la démonstration du quaternion :\n",
+    "\n",
+    "~~~python\n",
+    "from pySynope import Quaternion\n",
+    "import math\n",
+    "\n",
+    "q = Quaternion(math.pi/4)\n",
+    "print(q)\n",
+    "\n",
+    "pos = Quaternion((1, 0, 0))\n",
+    "q2 = q*q\n",
+    "pos = q2*pos*q2.conjugate()\n",
+    "print(pos)  \n",
+    "~~~\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 3/6 : Les objets composés\n",
+    "\n",
+    "#### Question 8\n",
+    "\n",
+    "Vous allez créer une nouvelle classe `Point3d`, avec trois attributs `x`, `y` et `z`, qui serviront décrire les points, les axes, et la partie imaginaire du quaternion. Faites en sorte que le constructeur du quaternion appelle le constructeur de point. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 4/6 : L'héritage entre classes\n",
+    "\n",
+    "#### Question 9\n",
+    "\n",
+    "Définissez la classe dérivée `Circle` qui hérite de la classe `Superellipse`. Elle surcharge son constructeur __init__ en appelant celui du parent avec rx=ry=r et m=2. Elle contient une méthode supplementaire:\n",
+    "\n",
+    "    perimeter: renvoie le périmètre du cercle.\n",
+    "    \n",
+    "Dans le programme de démonstration de  `Superellipse`, ajoutez :\n",
+    "\n",
+    "~~~python\n",
+    "circle = pySynope.Circle()\n",
+    "circle.init(1)\n",
+    "print(circle.cloud(10))\n",
+    "print(circle.area(),math.pi)\n",
+    "print(circle.perimeter(),2.*math.pi)\n",
+    "~~~\n",
+    "\n",
+    "\n",
+    "#### Question 10\n",
+    "\n",
+    "Définissez la classe dérivée Sphere qui hérite de la classe `Superellipsoid`. Elle surcharge son constructeur __init__ en appelant celui du parent avec rx=ry=rz=r et m1=m2=2. Elle contient une méthode supplementaire:\n",
+    "\n",
+    "    area: renvoie l'aire de la sphère.\n",
+    "    \n",
+    "Dans le programme de démonstration de `Superellipsoid`, ajoutez :\n",
+    "\n",
+    "~~~python\n",
+    "sphere = pySynope.Sphere(1)\n",
+    "print(sphere.volume(), 4./3*math.pi)\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "## 5/6 : Sauvegarde et reconstruction d'objets"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 11\n",
+    "\n",
+    "1. Modifiez la classe `Superellipsoide` pour que sa méthode `cloud()` renvoit une double liste d'instance de `Point3d`.\n",
+    "2. Interactivement, créez une instance de `Superellipsoide`, appelez `cloud()`, et stockez la collection de `Point3d` dans un fichier.\n",
+    "3. Créez un programme qui lit ce fichier, applique une rotation d'angle PI/4 à tous les points, et resauvegarde le résultat dans le fihier de départ.\n",
+    "4. Vérifiez qu'en appliquant 8 fois le programme ci-dessus, on retrouve les points de départ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "## 6/6 : Quelques concepts avancés"
    ]
@@ -86,154 +269,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1/3 : Les classes de base\n",
+    "#### Question 12\n",
     "\n",
-    "1. Quaternion\n",
-    "2. Superellipse\n",
-    "3. Superellipsoid"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Définissez ces trois classes de base, chacune dans un fichier à part."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Superellipse\n",
-    "\n",
-    "Attributs\n",
-    " \n",
-    "* n : nombre de points de discrétisation en theta\n",
-    "* rx : rayon suivant x\n",
-    "* ry : rayon suivant y\n",
-    "* m : puissance dans l'expression de la superellipse.\n",
-    "\n",
-    " \n",
-    " Méthodes\n",
-    "\n",
-    " * Le constructeur \\__init\\__: affecte les attributs de la classe n, rx, ry, m à partir des arguments spécifiés par l'utiliseateur.\n",
-    "\n",
-    " * surface: renvoie les points de la surface (deux listes x,y).\n",
-    "\n",
-    " * area: renvoie l'aire (un scalaire).\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Superellipsoid\n",
-    "\n",
-    "Attributs\n",
-    " \n",
-    " \n",
-    " * n : nombre de points de discrétisation en theta et en phi\n",
-    " * rx : rayon suivant x\n",
-    " * ry : rayon suivant y\n",
-    " * rz : rayon suivant z\n",
-    " * m1 : puissance dans l'expression de la superellipse\n",
-    " * m2 : paramètre qui détérmine le \"balayage\" vertical \n",
-    " \n",
-    " \n",
-    " Méthodes\n",
-    " \n",
-    "\n",
-    " * \\__init\\__: affecte les attributs de la classe à partir des arguments du constructeur.\n",
-    "\n",
-    " * surface : renvoie le nuage de points de la surface: trois listes a 2 dimensions (listes imbriquées) x,y,z.\n",
-    "\n",
-    " * volume : renvoie le volume de la superellipsoide.\n",
-    "\n",
-    "\n",
-    "### Quaternion\n",
-    "\n",
-    "Attributs\n",
-    "\n",
-    "* coords (x,y,z)\n",
-    "* w \n",
-    "\n",
-    "* set_angle\n",
-    "* rotate\n",
-    "* conjugate\n",
-    "* normalize\n",
-    "* x, y, z\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2/3 : Classes dérivées"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Définissez la classe dérivée *Circle* qui hérite de la classe *Superellipse*. Elle surcharge son constructeur \\__init\\__ en appelant celui du parent avec rx=ry=r et m=2. Elle contient une méthode supplementaire:\n",
-    " \n",
-    " \n",
-    " * perimeter: renvoie le périmètre du cercle.\n",
-    "\n",
-    "\n",
-    "Définissez la classe dérivée *Sphere* qui hérite de la classe *Superellipsoid*. Elle surcharge son constructeur \\__init\\__ en appelant celui du parent avec rx=ry=rz=r et m1=m2=2. Elle contient une méthode supplementaire:\n",
-    " \n",
-    " \n",
-    "  * area: renvoie l'aire de la sphère.\n",
-    "  \n",
-    "  Vous aurrez besoin de définir la fonction mathématique la *fonction bêta*: \n",
-    "  \n",
-    "  \n",
-    "     - beta_func(r, t)\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3/3 : Demos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Créez 2 scripts demo: superellipsoid.py et quaternion.py. \n",
-    "\n",
-    "Le premier:\n",
-    "\n",
-    " 1. Crée une superellipse et affiche à l'ecran son aire; \n",
-    " 2. Crée un cercle et affiche à l'ecran son aire et son périmètre;\n",
-    " 3. Crée une superellipsoide et affiche à l'ecran son volume;\n",
-    " 4. Crée une sphère et affiche à l'ecran son volume et son aire.\n",
-    " \n",
-    "\n",
-    "Le deuxième:\n",
-    "\n",
-    " 1. Crée un quaternion *q* avec la classe *Quaternion*. \n",
-    " 2. Affiche à l'ecran ses coordonnées avec la fonction *print* de python (qui appele la méthode \\__str\\__() de la classe *Quaternion*).\n",
-    " 3. Fixe un angle (e.g. pi/4);\n",
-    " 4. Normalize et affiche à l'ecran les nouvelles coordonnées;\n",
-    " 5. Effectue une rotation du produit (q\\*q) et affiche à l'ecran les coordonnées.\n"
+    "En utilisant des \"properties\", définissez des \"getters\" et des \"setters\" afin d'éliminer tout accès direct aux attributs."
    ]
   },
   {
@@ -388,6 +426,15 @@
     "    return HTML(styles)\n",
     "css_styling()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
